Update to Wine TkG 10.17 and add hwloc
Update to Wine TkG 10.17 and add hwloc

--- a/emulators/wine-tkg-devel/Makefile
+++ b/emulators/wine-tkg-devel/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	wine
-DISTVERSION=	10.16
+DISTVERSION=	10.17
 PORTEPOCH=	1
 CATEGORIES=	emulators
 MASTER_SITES=	https://dl.winehq.org/wine/source/10.x/
@@ -16,11 +16,12 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 ONLY_FOR_ARCHS=	amd64 i386
 
 BUILD_DEPENDS=	${LOCALBASE}/bin/flex:textproc/flex
+LIB_DEPENDS=	libhwloc.so:devel/hwloc2
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	wine-mirror
 GH_PROJECT=	wine
-GH_TAGNAME=	01269452e0fbb1f081d506bd64996590a553e2b9
+GH_TAGNAME=	d62035da4aa91327c6e38a2c8a66b829eb0983ed
 
 # Only devel/llvm17 and later come with necessary include files - PR274542
 USES=		bison cpe desktop-file-utils gmake \
@@ -43,6 +44,7 @@ CONFIGURE_ARGS+=--verbose \
 		--without-gettext --without-gettextpo \
 		--without-gphoto \
 		--without-gssapi \
+		--with-hwloc \
 		--without-inotify \
 		--without-krb5 \
 		--with-mingw CROSSCC="clang" \
